--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -16,7 +16,7 @@ a:link {
   text-decoration: none;
 }
 a:hover {
-  color: purple;
+  color: green;
   background-color: transparent;
   text-decoration: underline;
 }
@@ -52,8 +52,11 @@ a:hover {
   background: #333;
 }
 .carousel, .carousel-inner{
-  height: 30em;
-  width: 20em;
+  width: 50em;
+  height: auto;
+}
+.carousel-inner{
+  display: inline-block;
 }
 .footer {
   height: 4%;
@@ -154,4 +157,73 @@ a:hover {
 .ourFavoritesImage{
   max-height: 100%;
   max-width: 100%;
+}
+.multi-item-carousel{
+  .carousel-inner{
+    > .item{
+      transition: 500ms ease-in-out left;
+    }
+    .active{
+      &.left{
+        left:-33%;
+      }
+      &.right{
+        left:33%;
+      }
+    }
+    .next{
+      left: 33%;
+    }
+    .prev{
+      left: -33%;
+    }
+    @media all and (transform-3d), (-webkit-transform-3d) {
+      > .item{
+        // use your favourite prefixer here
+        transition: 500ms ease-in-out left;
+        transition: 500ms ease-in-out all;
+        backface-visibility: visible;
+        transform: none!important;
+      }
+    }
+  }
+  .carouse-control{
+    &.left, &.right{
+      background-image: none;
+    }
+  }
+}
+
+// non-related styling:
+body{
+  background: #333;
+  color: #ddd;
+}
+h1{
+  color: white;
+  font-size: 2.25em;
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
+  text-shadow: 0px 2px 0px rgba(0, 0, 0, 1);
+}
+ .carouselImg{
+   width: auto;
+ }
+#firstBestSeller{
+padding:1em;
+border-right:1px solid #bbb;
+}
+.carouselPrice{
+  background: #ff2;
+  border: 1px solid #bbb;
+  height: 1.5em;
+  width: 4em;
+  position: relative;
+  top: -1.5em;
+  left: 5.7em;
+}
+.ourFavorite{
+  background: #f3f;
+  border: 1px solid #000;
 }
