--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -40,7 +40,7 @@ img {
 }
 
 a{
-    color: gray;    
+    color: gray;
 }
 
 a:link {
@@ -71,15 +71,15 @@ a:hover {
 
 #bookImage{
   position: absolute;
-  
+
  // left: 100px;
   border: 3px solid #000;
   padding: 5px;
 }
 #bookData{
   position: relative;
-  
-  
+
+
 }
 #addToCartButton {
   position: relative;
@@ -102,42 +102,42 @@ a:hover {
 }
 
 .container-fluid{
-    
+
     padding-left:0px;
     padding-right:0px;
 }
 .upper-nav{
      line-height: 1.5;
-    height: 70px; 
+    height: 70px;
 }
 
 
 .lower-nav{
- 
-    height: 50px; 
+
+    height: 50px;
 }
 
 .header-search-form{
     width: 100%;
     position: relative;
     padding: 0 10px;
-    margin: auto; 
+    margin: auto;
 }
 
 .header-search-form input{
-    
+
     width: 100%;
     height:44px;
     font-size: 14px;
     border-radius: 50px;
     border: none;
-       
+
     padding: 0 19px;
     background: #f0f0f0;
 }
 
 .header-search-form button{
-    position: absolute; 
+    position: absolute;
     height: 100%;
     width: 44px;
     right: 10px;
@@ -147,8 +147,8 @@ a:hover {
     top: 0;
     font-size: 1em;
     font-weight: 700;
-    
-   
+
+
     cursor: pointer;
     background-color: transparent;
 
@@ -375,7 +375,7 @@ border-right:1px solid #bbb;
    color:purple;
 }
 .off{
-    color: gainsboro; 
+    color: gainsboro;
 }
 
 .rBox{
@@ -388,7 +388,7 @@ border-right:1px solid #bbb;
     padding-bottom: 10px;
     padding-left: 15px;
     padding-right: 15px;
-    
+
 }
 
 /* Accordion */
@@ -397,7 +397,7 @@ border-right:1px solid #bbb;
 	margin-top: 20px;
 	border-top: 2px solid #e1e1e1;
     margin-bottom: 10px;
-    
+
 }
 
 
@@ -427,7 +427,7 @@ border-right:1px solid #bbb;
 	line-height: 1;
 	cursor: pointer;
 	border: none;
-	
+
 	background-color: transparent;
 	border-radius: 0;
 }
@@ -446,7 +446,7 @@ border-right:1px solid #bbb;
 
 .user{
     border-bottom: 1px solid #e1e1e1;
-    
+
 }
 
 .comment{
@@ -468,12 +468,12 @@ border-right:1px solid #bbb;
 
 #authorPic{
     position: relative;
-    
+
     object-fit: cover;
 
   width: 100%;
   height: auto;
-    
+
 }
 
 #bio{
@@ -483,7 +483,7 @@ border-right:1px solid #bbb;
 }
 
 #name{
-    
+
     margin-top: 3%;
     text-transform: uppercase;
 }
@@ -509,3 +509,34 @@ border-right:1px solid #bbb;
     margin-bottom: 1.8%;
     font-family: 'Josefin Sans', sans-serif;
 }
+
+/*---------------------
+ContactUs page
+---------------------*/
+
+.ContactUsText{
+  margin-top: 15px;
+}
+
+.form-field{
+  position: relative;
+  display: block;
+  padding-bottom: 10px;
+}
+
+.contactUsForm{
+  border: 1px solid #777;
+  margin-left: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 5px;
+  border-radius: 3px;
+}
+
+.form-field .long {
+    width: 415px;
+}
+
+/*---------------------
+END ContactUs page
+---------------------*/
