--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -13,6 +13,10 @@ img {
     vertical-align: middle;
 }
 
+h6{
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 .col-3{
     display:  -webkit-inline-box;
     text-align: center;
@@ -59,12 +63,12 @@ a:hover {
 .breads{
     margin-top: inherit;
     background: #f8f7f7;
-    padding: 15px 100px 15px ;
+    padding: 15px 200px 15px ;
 }
 #pageContainer{
     height: 100%;
-    padding-right: 100px;
-    padding-left: 100px;
+    padding-right: 200px;
+    padding-left: 200px;
     padding-top: 2em;
     padding-bottom: 5em;
 }
@@ -91,7 +95,7 @@ a:hover {
 .addtoCart {
     position: relative;
     border: 1.5px solid blue;
-    background-color: #0072d4 !important;
+    background-color: #0072d4h !important;
     color: white !important;
     padding: 5px 5px;
     text-align: center;
@@ -481,7 +485,7 @@ h1{
 }
 
 
-
+/*author page*/
 #authorPic{
     position: relative;
 
@@ -503,6 +507,7 @@ h1{
     margin-top: 3%;
     text-transform: uppercase;
 }
+
 
 .inlineBooks{
     margin-left: 2%;
@@ -526,12 +531,14 @@ h1{
     font-family: 'Josefin Sans', sans-serif;
 }
 
+
 .singleI{
 
     width: 250px;
     height: 180px;
     object-fit:cover;
 }
+
 #genres{
     padding-left: 5%;
     padding-right: 5%;
@@ -562,6 +569,7 @@ h1{
     background: rgb(0, 0, 0, 8); 
 }
 
+/*allbooks page*/
 .singleBook{
     margin: 2%;
     background-color:ghostwhite;
@@ -574,6 +582,78 @@ h1{
     margin-top: 5%;
     font-weight: 600;
 }
+
+.bookFilters{
+    padding-top: 1em;
+    background-color: #f0ffff9c;
+   /* position: fixed;*/
+    border: 1px solid azure;
+    border-radius: 5px;
+    min-height: 500px;
+    text-align: left;
+    display:block;
+    float: left;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.bookFilters h6{
+        font-size: 18px;
+    font-weight: 700;
+    color: #414141;
+    text-transform: uppercase;
+    margin-bottom: 45px;
+}
+
+.filters{
+    margin-top: 1em;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+.filters button{
+    font-weight:500;
+    color: darkblue;
+    font-size: 1.2em;
+    text-align: left;
+    background-color: transparent;
+    border:none;
+}
+
+.filters button:hover{
+    color: fuchsia;
+}
+.filters button:focus{
+    text-decoration: underline;
+    outline: none;
+}
+
+.filterBody{
+    font-size: 1em;
+}
+
+.filterBody button{
+    color: gray;
+    font-size: 1em;
+    font-weight: 500;
+}
+
+.filterBody button:hover>{
+    color: black;
+    font-size: 1em;
+    font-weight: 700;
+}
+
+.filterBody button:active{
+    color: black;
+    font-size: 1em;
+    font-weight: 700;
+    text-decoration: underline;
+}
+
+
+
+/*fine allbooks*/
+
 /*---------------------
 ContactUs page
 ---------------------*/
