--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -3,7 +3,7 @@
     --input-padding-y: .75rem;
 }
 body{
-    background-color: ghostwhite;
+    background-color: white;
     font-family: 'Montserrat', sans-serif;
     color: grey;
     overflow-x: hidden;
@@ -32,9 +32,7 @@ h6{
 }
 
 .upper-nav{
-  border-bottom: 0.2em solid #333;
-  border-bottom-left-radius: 2em;
-  border-bottom-right-radius: 2em;
+    box-shadow: 0 0.2rem 0.5rem 0 rgba(99, 99, 99, 0.37);
 }
 
 .upper-nav h2{
@@ -71,7 +69,7 @@ a:hover {
 
     margin-top: inherit;
     background: #f8f7f7;
-    padding: 15px 100px 15px ;
+    padding: 15px 200px 15px ;
 }
 #pageContainer{
     height: 100%;
@@ -101,19 +99,7 @@ a:hover {
 }
 
 .addtoCart {
-    <<<<<<< HEAD
-    position: relative;
-    border: 1.5px solid blue;
-    background-color: #0072d4h !important;
-    color: white !important;
-    padding: 5px 5px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    height: 50px;
-    width: fit-content;
-    =======
+  
     position: relative;
     border: 1.5px solid blue;
     background-color: #0072d4 !important;
@@ -125,7 +111,6 @@ a:hover {
     font-size: 16px;
     height: 50px;
     width: fit-content;
-    >>>>>>> 37e906766d1470c1b4604dffa9380567be192279
 
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -344,6 +329,11 @@ h1{
     color: gainsboro;
 }
 
+
+/*-------------
+book page
+----------------*/
+
 .rBox{
     width: 50%;
     border: 0.8px solid purple;
@@ -431,7 +421,9 @@ h1{
 }
 
 
-/*author page*/
+/*-------------
+author page
+----------------*/
 #authorPic{
     position: relative;
 
@@ -485,6 +477,10 @@ h1{
     object-fit:cover;
 }
 
+
+/*-------------
+genres page
+----------------*/
 #genres{
     padding-left: 5%;
     padding-right: 5%;
@@ -515,7 +511,9 @@ h1{
     background: rgb(0, 0, 0, 8);
 }
 
-/*allbooks page*/
+/*-------------
+All books page
+----------------*/
 .singleBook{
     margin: 2%;
     background-color:ghostwhite;
@@ -531,7 +529,7 @@ h1{
 
 .bookFilters{
     padding-top: 1em;
-      padding-bottom: 1em;
+    padding-bottom: 1em;
     background-color: #f0ffff9c;
     /* position: fixed;*/
     border: 1px solid azure;
@@ -601,6 +599,74 @@ h1{
 
 
 /*fine allbooks*/
+
+
+
+/*-------------
+All events page
+----------------*/
+
+.selected a{
+    font-weight: 700;
+    color: red !important;
+}
+
+.ribbon{
+    position: absolute;
+    top: 16px;
+    left: -6px;
+    width: 179px;
+    padding: 6px 4px 6px 16px;
+    text-align: left;
+    z-index: 100;
+    background: red;
+    color: white;
+}
+
+.event{
+    color: black;
+    margin-top: 3%;
+    margin-left: 10%;
+     margin-right:0;
+    //width: 60%;
+    padding: 6px 6px 6px 6px;
+    min-height: 200px;
+    border: 0.1em solid gray;
+    max-height: 500px;
+    
+    position: relative;
+    
+}
+
+
+.event img{
+    width: 100%;
+    height: 280px;
+  
+    object-fit: cover;
+    object-position: 100% 0;
+    
+}
+
+.event h5{
+    font-family: 'Josefin Sans', sans-serif;
+    
+   
+}
+.overlayInfo{
+    position: absolute;
+    bottom: 0px;
+    width:100%;
+    background-color: #ffffffd4;
+    height: 35%;
+   
+    padding: 8px 20px 8px 20px;
+ 
+}
+
+
+
+
 
 /*---------------------
 ContactUs page
@@ -709,11 +775,11 @@ Home page
 }
 
 .bestSeller span{
-  display: inline-block;
-  padding-top: 0.5em;
-  padding-bottom: 0;
-  padding-left: 1em;
-  padding-right: 3em;
+    display: inline-block;
+    padding-top: 0.5em;
+    padding-bottom: 0;
+    padding-left: 1em;
+    padding-right: 3em;
 }
 
 .bestSellerNumber{
@@ -761,7 +827,7 @@ Home page
 }
 
 .bestSeller p{
-  /*TODO tipizzazione di titolo autore e descrizione */
+    /*TODO tipizzazione di titolo autore e descrizione */
 }
 
 /*-------END Bestseller------*/
@@ -782,32 +848,32 @@ Home page
 }
 
 #leftOurFavourite{
-  border-right: 1px solid #aaa;
+    border-right: 1px solid #aaa;
 }
 
 .ourFavourite{
-  position: relative;
-  margin-left: 1em;
-  margin-right: 1em;
-  margin-bottom: 0.5em;
+    position: relative;
+    margin-left: 1em;
+    margin-right: 1em;
+    margin-bottom: 0.5em;
 }
 
 .ourFavourite img{
-  display: inline-block;
-  position: relative;
-  margin: 1em;
-  margin-left: 0;
+    display: inline-block;
+    position: relative;
+    margin: 1em;
+    margin-left: 0;
 }
 
 .ourFavourite span{
-  position: relative;
-  display: inline-block;
-  margin-top: 2em;
+    position: relative;
+    display: inline-block;
+    margin-top: 2em;
 }
 
 .ourFavourite p{
-  text-decoration: underline;
-  /*tipizzazione di titolo autore e descrizione*/
+    text-decoration: underline;
+    /*tipizzazione di titolo autore e descrizione*/
 }
 
 /*-------END ourFavourite------*/
@@ -820,15 +886,15 @@ END Home page
 /*-------Footer------*/
 
 footer{
-  position: relative;
-  text-align: center;
-  background-color: #333;
-  margin-bottom: 0.5em;
+    position: relative;
+    text-align: center;
+    background-color: #333;
+    margin-bottom: 0.5em;
 }
 
 footer a{
-  padding-right: 3em;
-  padding-left: 3em;
+    padding-right: 3em;
+    padding-left: 3em;
 }
 
 /*-------END Footer------*/
