--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -3,8 +3,8 @@
     --input-padding-y: .75rem;
 }
 body{
-    background-color: white;
-    font-family: 'Montserrat', sans-serif;
+    background-color: #F8F7FA;
+   
     color: grey;
     overflow-x: hidden;
 }
@@ -14,8 +14,11 @@ img {
     vertical-align: middle;
 }
 
-h6{
+h3,h4,h5, h6{
     font-family: 'Josefin Sans', sans-serif;
+}
+p{
+   font-family: 'Montserrat', sans-serif;  
 }
 
 .col-3{
@@ -67,16 +70,22 @@ a:hover {
 
 .breads{
 
-    margin-top: inherit;
+    margin-top: 0;
     background: #f8f7f7;
-    padding: 15px 200px 15px ;
+    /*padding: 15px 15% 15px ;*/
+    padding-left: 11%;
+    padding-top: 18px;
+    padding-bottom: 18px;
 }
 #pageContainer{
+    background-color: white;
     height: 100%;
-    padding-right: 200px;
-    padding-left: 200px;
-    padding-top: 2em;
-    padding-bottom: 5em;
+    padding-right: 1.5em;
+    padding-left: 1.5em;
+    margin-right: 10%;
+    margin-left: 10%;
+    padding-top: 1em;
+    padding-bottom: 3em;
 }
 
 #bookImage{
@@ -664,6 +673,52 @@ All events page
  
 }
 
+/*---------------------
+Single event page
+---------------------*/
+
+#basicInfo{
+    background-color: #dcdcdcb3;
+    padding: 30px 30px 20px
+}
+
+#title{
+    
+   font-weight:700; 
+}
+
+
+#eventImg {
+    padding: 0;
+     width: 100%;
+    height: 350px;
+    object-fit: cover;
+    object-position: 100% 0;
+}
+
+.infoContainer{
+    margin-top: 5%;
+}
+
+.infoContainer h6{
+  //  font-size: 14px;
+    font-weight: 700;
+    //color: #414141;
+    
+}
+
+.desc{
+    padding-left:5%;
+}
+.info{
+    padding-left: 30px;
+}
+.info p{
+    margin-bottom: 2px;
+}
+.info div{
+    height:100px;
+}
 
 
 
