--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -3,8 +3,8 @@
     --input-padding-y: .75rem;
 }
 body{
-    background-color: #F8F7FA;
-   
+    background-color: white;
+    font-family: 'Montserrat', sans-serif;
     color: grey;
     overflow-x: hidden;
 }
@@ -14,11 +14,8 @@ img {
     vertical-align: middle;
 }
 
-h3,h4,h5, h6{
+h6{
     font-family: 'Josefin Sans', sans-serif;
-}
-p{
-   font-family: 'Montserrat', sans-serif;  
 }
 
 .col-3{
@@ -70,22 +67,16 @@ a:hover {
 
 .breads{
 
-    margin-top: 0;
+    margin-top: inherit;
     background: #f8f7f7;
-    /*padding: 15px 15% 15px ;*/
-    padding-left: 11%;
-    padding-top: 18px;
-    padding-bottom: 18px;
+    padding: 15px 200px 15px ;
 }
 #pageContainer{
-    background-color: white;
     height: 100%;
-    padding-right: 1.5em;
-    padding-left: 1.5em;
-    margin-right: 10%;
-    margin-left: 10%;
-    padding-top: 1em;
-    padding-bottom: 3em;
+    padding-right: 200px;
+    padding-left: 200px;
+    padding-top: 2em;
+    padding-bottom: 5em;
 }
 
 #bookImage{
@@ -108,7 +99,7 @@ a:hover {
 }
 
 .addtoCart {
-  
+
     position: relative;
     border: 1.5px solid blue;
     background-color: #0072d4 !important;
@@ -642,25 +633,25 @@ All events page
     min-height: 200px;
     border: 0.1em solid gray;
     max-height: 500px;
-    
+
     position: relative;
-    
+
 }
 
 
 .event img{
     width: 100%;
     height: 280px;
-  
+
     object-fit: cover;
     object-position: 100% 0;
-    
+
 }
 
 .event h5{
     font-family: 'Josefin Sans', sans-serif;
-    
-   
+
+
 }
 .overlayInfo{
     position: absolute;
@@ -668,57 +659,11 @@ All events page
     width:100%;
     background-color: #ffffffd4;
     height: 35%;
-   
+
     padding: 8px 20px 8px 20px;
- 
+
 }
 
-/*---------------------
-Single event page
----------------------*/
-
-#basicInfo{
-    background-color: #dcdcdcb3;
-    padding: 30px 30px 20px
-}
-
-#title{
-    
-   font-weight:700; 
-}
-
-
-#eventImg {
-    padding: 0;
-     width: 100%;
-    height: 350px;
-    object-fit: cover;
-    object-position: 100% 0;
-}
-
-.infoContainer{
-    margin-top: 5%;
-}
-
-.infoContainer h6{
-  //  font-size: 14px;
-    font-weight: 700;
-    //color: #414141;
-    
-}
-
-.desc{
-    padding-left:5%;
-}
-.info{
-    padding-left: 30px;
-}
-.info p{
-    margin-bottom: 2px;
-}
-.info div{
-    height:100px;
-}
 
 
 
@@ -937,6 +882,59 @@ Home page
 END Home page
 ---------------------*/
 
+/*---------------------
+Cart page
+---------------------*/
+
+#cartTitle{
+  padding-top: 1em;
+}
+
+.cartItem{
+  position: relative;
+}
+
+.cartItem img{
+  position: relative;
+  margin: 1em;
+  display: inline-block;
+  width: 10%;
+
+}
+
+.cartItemInfo{
+  position: absolute;
+  top: 1.5em;
+
+  display: inline-block;
+}
+
+.cartItemPrice{
+  position: relative;
+
+}
+.cartItemRemove{
+  position: relative;
+  top: 1em;
+}
+
+
+#buyCart{
+  position: relative;
+  padding: 1em;
+  border: 1px solid #aaa;
+  border-radius: 0.5em; 
+  background-color: #ccc;
+
+}
+
+#buyCart button{
+  border-radius: 1em;
+}
+
+/*---------------------
+END Cart page
+---------------------*/
 
 /*-------Footer------*/
 
