--- a/FrontEnd/assets/css/CSS.css
+++ b/FrontEnd/assets/css/CSS.css
@@ -961,6 +961,11 @@ TABLET
 
     body{
     }
+    .pageContainer{
+        padding-right:inherit;
+    padding-left: inherit;
+        
+    }
 }
 
 /*----------------------------
